# src/controllers/CartController.js
@@ -1,3 +1,4 @@
+const { getProductInCart } = require("../services/CartService");
 const CartService = require("../services/CartService");
 
 module.exports = {
@@ -49,4 +50,24 @@ module.exports = {
                 });
           }
     },
+
+    async getProductInCart(req, res) {
+        // #swagger.tags = ['Cart']
+       try {
+           let data = await CartService.getProductInCart(req.query.userId,req.params.productId);
+           return res.status(200).json({
+               status: 200,
+               message: 'Get Product In Cart Successful',
+               data:data
+           });
+   
+           } catch (err) {
+               return res.status(400).json({
+                   status: 400,
+                   message: 'Get Product In Cart Failed',
+               });
+         }
+   },
+
+
 };
