# src/route/CartRoute.js
@@ -6,6 +6,7 @@ let route =  express.Router();
 
 
 route.get('/',CartController.getAllProductByUserId);
+route.get('/:productId',CartController.getProductInCart);
 route.post('/',CartController.addProductToCart);
 route.delete('/:productId',CartController.removeProductToCart);
 
